# MARS-Multimodal-Alignment-and-Ranking-System-for-Few-Shot-Segmentation

./: .gitignore  README.md  astro.config.mjs  main_MARS.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_torch.txt  vis
.github/workflows/: astro.yml
alpha_clip/: model.py
clip/: model.py
datasets/: README.md
datasets/COCO2014/: fold0_badPredsIdxs.txt  fold1_badPredsIdxs.txt  fold2_badPredsIdxs.txt  fold3_badPredsIdxs.txt
dinov2/layers/: attention.py  block.py
dinov2/models/: test.ipynb  vision_transformer.py
mars/: ClipPipeline.py  MARS.py
mars/components/: FilteringMergingModule.py  LLM.py  OpenAILLM.py  PriorInformationRefinementModule.py  PromptGenerator.py  SoftmaxGradCAM.py  TextFetcher.py  TextRetrieverModule.py  VLM.py  VisualPromptGenerator.py  VisualTextAlignmentModule.py  VisualVisualAlignmentModule.py
mars/components/helpers/: prompts.py
mars/data/: coco.py  dataset.py  fss.py  lvis.py  pascal5i.py  transforms.py
mars/utils/: coco_prompts.py  evaluation.py  get_cam.py  logger.py  mask_scores.py
matcher/: Matcher.py  Matcher_SemanticSAM.py
matcher/common/: logger.py  utils.py  vis.py
matcher/data/: coco.py  dataset.py  fss.py  pascal5i.py
models/: README.md
pytorch_grad_cam/: activations_and_gradients.py  base_cam.py
scripts/: coco_1shot.sh  coco_5shot.sh  fss_1shot.sh  fss_5shot.sh  lvis_1shot.sh  lvis_5shot.sh  pascal_1shot.sh  pascal_5shot.sh
segment_anything/: automatic_mask_generator.py  predictor.py
segment_anything/utils/: amg.py
src/components/: Figure.astro  ImageSlider.tsx
src/pages/: index.mdx
utils/: backbone_loader.py  misc.py
