[project]
name = "mars-multimodal-alignment-and-ranking-system-for-few-shot-segmentation"
version = "0.1.0"
description = "Package for the official implementation of \"MARS: a Multimodal Ament and Ranking System for Few-Shot Segmentation\""
authors = [
    {name = "Paolo Pertino",email = "paolo.pertino@mail.polimi.it"}
]
readme = "README.md"
requires-python = "3.10.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
