[project]
name = "mars-multimodal-alignment-and-ranking-system-for-few-shot-segmentation"
version = "0.1.0"
description = "Package for the official implementation of \"MARS: a Multimodal Ament and Ranking System for Few-Shot Segmentation\""
authors = [
    {name = "Paolo Pertino",email = "paolo.pertino@mail.polimi.it"},
    {name = "Stefano Samele",email = "stefano.samele@polimi.it"},
    {name = "Nico Catalano",email = "nico.catalano@polimi.it"},
    {name = "Matteo Matteucci",email = "matteo.matteucci@polimi.it"}
]
readme = "README.md"
requires-python = "3.10.14"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "xformers (>=0.0.29.post3,<0.0.30)",
    "accelerate (==1.0.1)",
    "bitsandbytes (==0.44.1)",
    "comet-ml (==3.46.0)",
    "ftfy (>=6.3.1,<7.0.0)",
    "future (>=1.0.0,<2.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "gradio (>=5.25.1,<6.0.0)",
    "gradio-client (>=1.8.0,<2.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "iopath (>=0.1.10,<0.2.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "loralib (==0.1.2)",
    "lxml (==5.3.0)",
    "matplotlib (==3.9.2)",
    "ninja (>=1.11.1.4,<2.0.0.0)",
    "nltk (==3.9.1)",
    "numpy (>=2.2.4,<3.0.0)",
    "omegaconf (==2.3.0)",
    "openai (==1.56.0)",
    "opencv-python (==4.10.0.84)",
    "pillow (==11.0.0)",
    "pot (==0.9.4)",
    "pycocotools (==2.0.8)",
    "pydantic (==2.9.2)",
    "pytorch-lightning (==2.3.3)",
    "pyyaml (==6.0.1)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (==1.2.2)",
    "scipy (==1.14.1)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorboardx (==2.6.2.2)",
    "timm (==0.6.13)",
    "torchmetrics (==1.4.2)",
    "torchshow (>=0.5.2,<0.6.0)",
    "tqdm (==4.66.4)",
    "transformers (==4.46.2)",
    "ttach (==0.0.3)",
    "umap-learn (>=0.5.7,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
xformers = {source = "pytorch"}
